# cvxlab_rh_dev

./: API_usage_guide.ipynb  CONTRIBUTING.md  README.md  data_handler_multistage.py  data_hanlder_rolling_horizon.py  environment.yml  multistage.ipynb  pyproject.toml  rolling.ipynb  setup.py
Model/Perfect_foresight_complete/: database.db  model_settings.xlsx  sets.xlsx
Models/Perfect_foresight/: database.db  model_settings.xlsx
Models/Perfect_foresight_2000/: sets.xlsx
PF_test/: 8C38E000  A669E000  API_usage_guide.ipynb  database.db  model_settings.xlsx
PF_test/input_data/: Cin.xlsx  MaxCap.xlsx  Y.xlsx  d.xlsx  load_max.xlsx  load_min.xlsx  u.xlsx
PF_test_YAML/: API_usage_guide.ipynb  database.db  problem.yml  sets.xlsx  structure_sets.yml  structure_variables.yml
PF_test_YAML/Nuova cartella/: I_ff.xlsx  MaxCap.xlsx  c_inv.xlsx  c_oem.xlsx  d.xlsx  load_max.xlsx
PF_test_YAML/input_data/: Cin.xlsx  MaxCap.xlsx  Y.xlsx  load_min.xlsx  u.xlsx
RH_test/: database.db  model_settings.xlsx  sets - Copia.xlsx
RH_test/input_data/: C_f.xlsx  Cin.xlsx  I_ff.xlsx  MaxCap.xlsx  MaxCap_sec.xlsx  Q_f.xlsx  X_f.xlsx  Y.xlsx  c_inv.xlsx  c_oem.xlsx  load_max.xlsx  load_min.xlsx
cvxlab/: __init__.py  constants.py
cvxlab/backend/: core.py  data_table.py  database.py  index.py  model.py  problem.py  set_table.py  variable.py
cvxlab/log_exc/: logger.py
cvxlab/support/: file_manager.py  model_directory.py  sql_manager.py  util.py  (+3 more)
docs/: conf.py  examples.rst  index.rst  installation.rst  usage.rst
esm/: __init__.py  constants.py
examples/: API_usage_guide.ipynb
(+430 files in other folders)
