[tool.poetry]
name = "pyesm"
version = "0.0.1"
description = "A Python-embedded, open-source modeling framework able to generate and to solve convex numerical optimization problems."
authors = ["Matteo V. Rocco <matteovincenzo.rocco@polimi.it>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
